corrects top actions on tablet and desktop

--- a/src/styles/blocks/lang-toggler.scss
+++ b/src/styles/blocks/lang-toggler.scss
@@ -25,6 +25,7 @@
 
     @include onTablet {
       display: none;
+      margin-right: 0;
     }
   }
 
